xatolar ustida togirlanayapti

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<html>
   <header class="header">
     <div class="container">
       <div class="header-section">
@@ -27,7 +27,7 @@
               <a class="header-nav__link" href="./about.html">About Us</a>
             </li>
             <li class="header-nav__item">
-              <a class="header-nav__link" href="#">Create Your Plan</a>
+              <a class="header-nav__link" href="./creat.html">Create Your Plan</a>
             </li>
           </ul>
         </nav>
@@ -255,5 +255,4 @@
       </div>
     </div>
   </footer>
-
 </html>
