--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <header class="site-header">
+  <header class="site-header
+  js-header-button">
     <a href="#" class="site-header__logo">
       <img src="./img/logo.svg" alt="logo" width="163" height="18">
     </a>
