--- a/creat.html
+++ b/creat.html
@@ -17,7 +17,7 @@
         <a class="header-logo__link" href="#">
           <img class="header-logo__img" src="./img/logo.svg" alt="logo">
         </a>
-        <button class="header-button header-section--open"></button>
+        <button class="header-button"></button>
 
         <nav class="header-nav">
           <ul class="header-nav__list">
