--- a/creat.html
+++ b/creat.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creat plan</title>
-  <link rel="stylesheet" href="./css/creat.css">
   <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/creat.css">
 </head>
 
 <body>
-  <header class="header js-header-button">
+  <header class="site-header js-header-button">
     <div class="container">
       <div class="header-section">
         <a class="header-logo__link" href="#">
