--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header class="site-header
+  <header class="header
   js-header-button">
     <a href="#" class="site-header__logo">
       <img src="./img/logo.svg" alt="logo" width="163" height="18">
