--- a/creat.html
+++ b/creat.html
@@ -6,19 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creat plan</title>
-  <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/creat.css">
+  <link rel="stylesheet" href="./css/normalize.css">
 </head>
 
 <body>
-  <header class="site-header js-header-button">
+  <header class="header js-header-button">
     <div class="container">
       <div class="header-section">
         <a class="header-logo__link" href="#">
           <img class="header-logo__img" src="./img/logo.svg" alt="logo">
         </a>
         <button class="header-button"></button>
-
         <nav class="header-nav">
           <ul class="header-nav__list">
             <li class="header-nav__item">
@@ -35,6 +34,7 @@
       </div>
     </div>
   </header>
+
 
   <div class="hero">
     <div class="container">
