togirlandi js html

--- a/about.html
+++ b/about.html
@@ -11,28 +11,28 @@
 </head>
 
 <body>
-  <header class="header
-  js-header-button">
-    <a href="#" class="site-header__logo">
-      <img src="./img/logo.svg" alt="logo" width="163" height="18">
-    </a>
-
-    <button class="site-header__toggler"></button>
-
-    <nav class="site-nav">
-      <ul class="site-nav__list">
-        <li class="site-nav__item">
-          <a href="./index.html" class="site-nav__link">Home</a>
-        </li>
-        <li class="site-nav__item">
-          <a href="./about.html" class="site-nav__link">About Us</a>
-        </li>
-        <li class="site-nav__item">
-          <a href="./creat.html" class="site-nav__link">Create your plan</a>
-        </li>
-      </ul>
-    </nav>
-
+  <header class="header js-header-button">
+    <div class="container">
+      <div class="header-section">
+        <a class="header-logo__link" href="#">
+          <img class="header-logo__img" src="./img/logo.svg" alt="logo">
+        </a>
+        <button type="button" class="header-button"></button>
+        <nav class="header-nav">
+          <ul class="header-nav__list">
+            <li class="header-nav__item">
+              <a class="header-nav__link" href="./index.html">Home</a>
+            </li>
+            <li class="header-nav__item">
+              <a class="header-nav__link" href="./about.html">About Us</a>
+            </li>
+            <li class="header-nav__item">
+              <a class="header-nav__link" href="./creat.html">Create Your Plan</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </header>
 
   <section class="hero">
