--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="header-logo__link" href="#">
           <img class="header-logo__img" src="./img/logo.svg" alt="logo">
         </a>
-        <button class="header-button"></button>
+        <button type="button" class="header-button"></button>
         <nav class="header-nav">
           <ul class="header-nav__list">
             <li class="header-nav__item">
