--- a/index.html
+++ b/index.html
@@ -162,43 +162,37 @@
     </div>
   </main>
 
-  <section>
+  <section class="step">
     <div class="container">
-      <div class="how-work">
-        <h2 class="how--work__heading">How it works</h2>
+      <ul class="step-item">
 
-        <ul class="how-work__item">
+        <li class="step--icon icon--step">
+          <div class="step__content">
+            <h2 class="step-heading">Pick your coffee</h2>
+            <p class="step-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and
+              we
+              pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+          </div>
+        </li>
 
-          <li class="how-work__icon">
-            <div class="how-work__list">
-              <span class="pick--coffe__span">01</span>
-              <h3 class="pick--coffe__heading">Pick your coffee</h3>
-              <p class="pick--coffe__text">Select from our evolving range of artisan coffees. Our beans are ethically
-                sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to
-                try out.</p>
-            </div>
-          </li>
+        <li class="step--icon icon--step">
+          <div class="step__content">
+            <h2 class="step-heading">Choose the frequency</h2>
+            <p class="step-text">Customize your order frequency, quantity, even your roast style and grind type. Pause,
+              skip or cancel your subscription with no commitment through our online portal.</p>
+          </div>
+        </li>
 
-          <li class="how-work__icon">
-            <div class="how-work__list">
-              <span class="pick--coffe__span">02</span>
-              <h3 class="pick--coffe__heading">Choose the frequency</h3>
-              <p class="pick--coffe__text">Customize your order frequency, quantity, even your roast style and grind
-                type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
-            </div>
-          </li>
+        <li class="step--icon icon--step">
+          <div class="step__content">
+            <h2 class="step-heading">Receive and enjoy!</h2>
+            <p class="step-text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning
+              world-class coffees curated to provide a distinct tasting experience.
+            </p>
+          </div>
+        </li>
 
-          <li class="how-work__icon">
-            <div class="how-work__list">
-              <span class="pick--coffe__span">03</span>
-              <h3 class="pick--coffe__heading">Receive and enjoy!</h3>
-              <p class="pick--coffe__text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy
-                award-winning
-                world-class coffees curated to provide a distinct tasting experience.</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+      </ul>
     </div>
   </section>
 
