add modal change

--- a/creat.html
+++ b/creat.html
@@ -94,32 +94,32 @@
           <a class="preferences__link" href="#preferences-list">Preferences</a>
         </div>
       </li>
-  
+
       <li class="preferences__item">
         <div class="preferences__content">
           <a class="preferences__link" href="#bean-type">Bean Type</a>
         </div>
       </li>
-  
+
       <li class="preferences__item">
         <div class="preferences__content">
           <a class="preferences__link" href="#quantity">Quantity</a>
         </div>
       </li>
-  
+
       <li class="preferences__item">
         <div class="preferences__content">
           <a class="preferences__link" href="#grind-option">Grind Option</a>
         </div>
       </li>
-  
+
       <li class="preferences__item">
         <div class="preferences__content">
           <a class="preferences__link" href="#deliveries">Deliveries</a>
         </div>
       </li>
     </ol>
-  
+
     <div class="how-you-drink">
       <div class="container">
         <section class="how__drink" id="preferences-list">
@@ -129,9 +129,9 @@
               <img class="how__drink--img" src="./img/bottom.svg" alt="" width="19" height="12">
             </button>
           </div>
-  
+
           <form action="https://echo.htmlacademy.ru" method="POST">
-  
+
             <div class="faq__form">
               <div class="faq-from__group">
                 <label class="how__drink--label">
@@ -142,7 +142,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name1">
@@ -153,7 +153,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name1">
@@ -167,7 +167,7 @@
             </div>
           </form>
         </section>
-  
+
         <section class="how__drink" id="deliveries">
           <div class="how__drink--item">
             <h2 class="how__drink--heading">What type of coffee?</h2>
@@ -175,43 +175,46 @@
               <img class="how__drink--img" src="./img/bottom.svg" alt="" width="19" height="12">
             </button>
           </div>
-  
+
           <form action="https://echo.htmlacademy.ru" method="POST">
-  
+
             <div class="faq__form">
               <div class="faq-from__group faq-from__chacked">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name5">
                   <div class="how__drink--content">
                     <span class="capsule capsule2">Single Origin</span>
-                    <span class="compatible compatible2">Distinct, high quality coffee from a specific family-owned farm</span>
+                    <span class="compatible compatible2">Distinct, high quality coffee from a specific family-owned
+                      farm</span>
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name5">
                   <div class="how__drink--content">
                     <span class="capsule capsule2">Decaf</span>
-                    <span class="compatible compatible2">Just like regular coffee, except the caffeine has been removed</span>
+                    <span class="compatible compatible2">Just like regular coffee, except the caffeine has been
+                      removed</span>
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name5">
                   <div class="how__drink--content">
                     <span class="capsule capsule2">Blended</span>
-                    <span class="compatible compatible2">Combination of two or three dark roasted beans of organic coffees</span>
+                    <span class="compatible compatible2">Combination of two or three dark roasted beans of organic
+                      coffees</span>
                   </div>
                 </label>
               </div>
             </div>
           </form>
         </section>
-  
+
         <section class="how__drink" id="quantity">
           <div class="how__drink--item">
             <h2 class="how__drink--heading">How much would you like?</h2>
@@ -219,11 +222,11 @@
               <img class="how__drink--img" src="./img/bottom.svg" alt="" width="19" height="12">
             </button>
           </div>
-  
+
           <form action="https://echo.htmlacademy.ru" method="POST">
-  
+
             <div class="faq__form">
-            
+
               <div class="faq-from__group faq-from__chacked">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name3">
@@ -234,7 +237,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name3">
@@ -245,7 +248,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name3">
@@ -259,7 +262,7 @@
             </div>
           </form>
         </section>
-  
+
         <section class="how__drink" id="grind-option">
           <div class="how__drink--item">
             <h2 class="how__drink--heading">Want us to grind them?</h2>
@@ -267,9 +270,9 @@
               <img class="how__drink--img" src="./img/bottom.svg" alt="" width="19" height="12">
             </button>
           </div>
-  
+
           <form action="https://echo.htmlacademy.ru" method="POST">
-  
+
             <div class="faq__form">
               <div class="faq-from__group">
                 <label class="how__drink--label">
@@ -280,7 +283,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name4">
@@ -291,7 +294,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group faq-from__chacked">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name4">
@@ -304,10 +307,10 @@
               </div>
             </div>
           </form>
-  
-  
+
+
         </section>
-  
+
         <section class="how__drink" id="deliveries">
           <div class="how__drink--item">
             <h2 class="how__drink--heading">How often should we deliver?</h2>
@@ -315,9 +318,9 @@
               <img class="how__drink--img" src="./img/bottom.svg" alt="" width="19" height="12">
             </button>
           </div>
-  
+
           <form action="https://echo.htmlacademy.ru" method="POST">
-  
+
             <div class="faq__form">
               <div class="faq-from__group faq-from__chacked">
                 <label class="how__drink--label">
@@ -328,7 +331,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name5">
@@ -338,7 +341,7 @@
                   </div>
                 </label>
               </div>
-  
+
               <div class="faq-from__group">
                 <label class="how__drink--label">
                   <input class="how__drink-input visually-hidden" type="radio" name="name5">
@@ -353,7 +356,7 @@
         </section>
       </div>
     </div>
-  
+
   </section>
   <section class="summary">
     <div class="container">
@@ -416,7 +419,7 @@
             <a href="#" class="networks-link">
               <svg width="25" height="24" viewBox="0 0 25 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M12.1002 0C8.84122 0 8.43322 0.014 7.15322 0.072C2.79522 0.272 0.37322 2.69 0.17322 7.052C0.11422 8.333 0.10022 8.741 0.10022 12C0.10022 15.259 0.11422 15.668 0.17222 16.948C0.37222 21.306 2.79022 23.728 7.15222 23.928C8.43322 23.986 8.84122 24 12.1002 24C15.3592 24 15.7682 23.986 17.0482 23.928C21.4022 23.728 23.8302 21.31 24.0272 16.948C24.0862 15.668 24.1002 15.259 24.1002 12C24.1002 8.741 24.0862 8.333 24.0282 7.053C23.8322 2.699 21.4112 0.273 17.0492 0.073C15.7682 0.014 15.3592 0 12.1002 0ZM12.1002 2.163C15.3042 2.163 15.6842 2.175 16.9502 2.233C20.2022 2.381 21.7212 3.924 21.8692 7.152C21.9272 8.417 21.9382 8.797 21.9382 12.001C21.9382 15.206 21.9262 15.585 21.8692 16.85C21.7202 20.075 20.2052 21.621 16.9502 21.769C15.6842 21.827 15.3062 21.839 12.1002 21.839C8.89622 21.839 8.51622 21.827 7.25122 21.769C3.99122 21.62 2.48022 20.07 2.33222 16.849C2.27422 15.584 2.26222 15.205 2.26222 12C2.26222 8.796 2.27522 8.417 2.33222 7.151C2.48122 3.924 3.99622 2.38 7.25122 2.232C8.51722 2.175 8.89622 2.163 12.1002 2.163ZM5.93822 12C5.93822 8.597 8.69722 5.838 12.1002 5.838C15.5032 5.838 18.2622 8.597 18.2622 12C18.2622 15.404 15.5032 18.163 12.1002 18.163C8.69722 18.163 5.93822 15.403 5.93822 12ZM12.1002 16C9.89122 16 8.10022 14.21 8.10022 12C8.10022 9.791 9.89122 8 12.1002 8C14.3092 8 16.1002 9.791 16.1002 12C16.1002 14.21 14.3092 16 12.1002 16ZM17.0652 5.595C17.0652 4.8 17.7102 4.155 18.5062 4.155C19.3012 4.155 19.9452 4.8 19.9452 5.595C19.9452 6.39 19.3012 7.035 18.5062 7.035C17.7102 7.035 17.0652 6.39 17.0652 5.595Z"/>
+                  d="M12.1002 0C8.84122 0 8.43322 0.014 7.15322 0.072C2.79522 0.272 0.37322 2.69 0.17322 7.052C0.11422 8.333 0.10022 8.741 0.10022 12C0.10022 15.259 0.11422 15.668 0.17222 16.948C0.37222 21.306 2.79022 23.728 7.15222 23.928C8.43322 23.986 8.84122 24 12.1002 24C15.3592 24 15.7682 23.986 17.0482 23.928C21.4022 23.728 23.8302 21.31 24.0272 16.948C24.0862 15.668 24.1002 15.259 24.1002 12C24.1002 8.741 24.0862 8.333 24.0282 7.053C23.8322 2.699 21.4112 0.273 17.0492 0.073C15.7682 0.014 15.3592 0 12.1002 0ZM12.1002 2.163C15.3042 2.163 15.6842 2.175 16.9502 2.233C20.2022 2.381 21.7212 3.924 21.8692 7.152C21.9272 8.417 21.9382 8.797 21.9382 12.001C21.9382 15.206 21.9262 15.585 21.8692 16.85C21.7202 20.075 20.2052 21.621 16.9502 21.769C15.6842 21.827 15.3062 21.839 12.1002 21.839C8.89622 21.839 8.51622 21.827 7.25122 21.769C3.99122 21.62 2.48022 20.07 2.33222 16.849C2.27422 15.584 2.26222 15.205 2.26222 12C2.26222 8.796 2.27522 8.417 2.33222 7.151C2.48122 3.924 3.99622 2.38 7.25122 2.232C8.51722 2.175 8.89622 2.163 12.1002 2.163ZM5.93822 12C5.93822 8.597 8.69722 5.838 12.1002 5.838C15.5032 5.838 18.2622 8.597 18.2622 12C18.2622 15.404 15.5032 18.163 12.1002 18.163C8.69722 18.163 5.93822 15.403 5.93822 12ZM12.1002 16C9.89122 16 8.10022 14.21 8.10022 12C8.10022 9.791 9.89122 8 12.1002 8C14.3092 8 16.1002 9.791 16.1002 12C16.1002 14.21 14.3092 16 12.1002 16ZM17.0652 5.595C17.0652 4.8 17.7102 4.155 18.5062 4.155C19.3012 4.155 19.9452 4.8 19.9452 5.595C19.9452 6.39 19.3012 7.035 18.5062 7.035C17.7102 7.035 17.0652 6.39 17.0652 5.595Z" />
               </svg>
 
             </a>
@@ -425,6 +428,35 @@
       </div>
     </div>
   </footer>
+
+  <section class="order-modal">
+    <div class="order-modal__wrapper">
+      <div class="order-modal-top">
+        <h2 class="order-modal__heading">Order Summary</h2>
+      </div>
+      <div class="order-modal_box">
+        <q class="order-modal__content">I drink my coffee as 
+          <span>Filter</span>, with a 
+          <span>Decaf</span> type of bean. 
+          <span>250g</span> ground ala 
+          <span>Cafetiére</span>, sent to me 
+          <span>Every Week</span>.
+        </q>
+
+        <p class="order-modal__info">Is this correct? You can proceed to checkout or go back to plan selection ifsomething is off. Subscription discount codes can also be redeemed at the checkout.
+        </p>
+        <button class="btn btn--primary btn--checkout" form="order-form" type="submit">
+          <span class="order-checkout">Checkout -</span>$14.00 /mo
+        </button>
+
+        <div class="order-madal__mobile">
+          <p class="order-madal__mobile-text">$14.00 / mo</p>
+        <a class="order-checkout__button" href="#">Checkout</a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
 
   <script src="./js/main.js"></script>
 </body>
